<resources>
    <string name="app_name">PrimeDB</string>
    <string name="good_morning_n_welcome_back">Good morning, Welcome back</string>
    <string name="check_out_the_new_release_movie_today">Check out the new release movie today!</string>
    <string name="filter_by_your_subscribed_streaming_services_and_find_something_to_watch">Filter by your subscribed streaming services and find something to watch</string>
    <string name="app_logo">app logo</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Discover">Discover</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="tv_show">TV Show</string>
    <string name="Movie">Movie</string>
    <string name="Search">Search</string>
    <string name="News">News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_out_the_latest_movies_today">Check out the latest movies today</string>
    <string name="check_out_the_latest_tv_show_today">Check out the latest TV Show today</string>
    <string name="Trending">Trending</string>
    <string name="Popular">Popular</string>
    <string name="retry">Retry</string>
    <string name="catch_up_the_latest_news_everyday">Catch up the latest news everyday</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="app">App</string>
    <string name="dark_Mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="app_version">Version</string>
    <string name="List">List</string>
    <string name="Your_List">Your list</string>
    <string name="Log_Out">Log Out</string>
    <string name="Watchlist">Watchlist</string>
    <string name="Upcoming">Upcoming</string>
    <string name="Settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="imageview_backdrop">imageview_backdrop</string>
    <string name="release">Release:</string>
    <string name="duration">Duration:</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="your_snapshot">Your Snapshot</string>
    <string name="watching_tonight">Watching Tonight</string>
    <string name="top_pick_for_you">Top pick for you</string>
    <string name="there_is_no_connection">There is no connection</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="icon_drama">Icon Drama</string>
    <string name="revenue">Revenue:</string>
    <string name="title">Title</string>
    <string name="tagline">Tagline</string>
    <string name="poster">Poster</string>
    <string name="synopsis">Synopsis</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="genre">Genre:</string>
    <string name="production_company">Production Company</string>
    <string name="production_logo">Production Logo</string>
    <string name="as">as</string>
    <string name="Character">Character</string>
    <string name="back_button">Back Button</string>
    <string name="budget">Budget:</string>
    <string name="rating">Rating</string>
    <string name="like">Like</string>
    <string name="add">Add</string>
</resources>