<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/pd_bold"
        android:layout_marginStart="@dimen/edge_spacing"
        android:layout_marginTop="@dimen/view_topdown_spacing"
        />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:textColor="@color/app_gray"
        android:text="@string/catch_up_the_latest_news_everyday"
        android:layout_marginStart="@dimen/edge_spacing"
        />
    <RelativeLayout
        android:id="@+id/rtlApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSubtitle"
        android:layout_marginTop="@dimen/view_topdown_spacing"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="@dimen/title_size"
            android:textColor="@color/app_color"
            android:fontFamily="@font/pd_regular"
            android:layout_marginStart="@dimen/edge_spacing"
            />
        <RelativeLayout
            android:id="@+id/rltUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUser"
            android:background="@color/app_gray">

            <TextView
                android:id="@+id/txtProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="@dimen/subtext_size"
                android:textColor="@color/black"
                android:fontFamily="@font/pd_bold"
                android:layout_marginTop="@dimen/edge_spacing"
                android:layout_marginBottom="@dimen/edge_spacing"
                android:layout_marginStart="@dimen/edge_spacing"
                />

            <TextView
                android:id="@+id/txtList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Your_List"
                android:textSize="@dimen/subtext_size"
                android:textColor="@color/black"
                android:fontFamily="@font/pd_bold"
                android:layout_marginTop="@dimen/edge_spacing"
                android:layout_marginBottom="@dimen/edge_spacing"
                android:layout_marginStart="@dimen/edge_spacing"
                android:layout_below="@id/txtProfile"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtApp"
            android:layout_below="@+id/rltUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app"
            android:textSize="@dimen/title_size"
            android:textColor="@color/app_color"
            android:fontFamily="@font/pd_regular"
            android:layout_marginStart="@dimen/edge_spacing"
            android:layout_marginTop="@dimen/view_topdown_spacing"
            />
        <RelativeLayout
            android:id="@+id/rltApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtApp"
            android:background="@color/app_gray"
            >
            <TextView
                android:id="@+id/txtTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_Mode"
                android:textSize="@dimen/subtext_size"
                android:textColor="@color/black"
                android:fontFamily="@font/pd_bold"
                android:layout_marginTop="@dimen/edge_spacing"
                android:layout_marginBottom="@dimen/edge_spacing"
                android:layout_marginStart="@dimen/edge_spacing"
                />

            <TextView
                android:id="@+id/txtLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="@dimen/subtext_size"
                android:textColor="@color/black"
                android:fontFamily="@font/pd_bold"
                android:layout_marginTop="@dimen/edge_spacing"
                android:layout_marginBottom="@dimen/edge_spacing"
                android:layout_marginStart="@dimen/edge_spacing"
                android:layout_below="@+id/txtTheme"
                />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="@dimen/subtext_size"
                android:textColor="@color/black"
                android:fontFamily="@font/pd_bold"
                android:layout_marginTop="@dimen/edge_spacing"
                android:layout_marginBottom="@dimen/edge_spacing"
                android:layout_marginStart="@dimen/edge_spacing"
                android:layout_below="@+id/txtLanguage"
                />
            <TextView
                android:id="@+id/txtLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Log_Out"
                android:textSize="@dimen/subtext_size"
                android:textColor="@color/black"
                android:fontFamily="@font/pd_bold"
                android:layout_marginTop="@dimen/edge_spacing"
                android:layout_marginBottom="@dimen/edge_spacing"
                android:layout_marginStart="@dimen/edge_spacing"
                android:layout_below="@+id/txtVersion"
                />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>