<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.MovieFragment"
    >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Discover"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/pd_bold"
        android:layout_marginStart="@dimen/margin_edge"
        android:layout_marginTop="@dimen/view_topdown_spacing"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/app_logo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/view_topdown_spacing"
        android:layout_marginEnd="@dimen/margin_edge"
        app:civ_border_color="@color/app_gray"
        android:src="@drawable/app_logo"
        />
    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:textColor="@color/app_gray"
        android:text="@string/check_out_the_latest_movies_today"
        android:layout_marginStart="@dimen/margin_edge"
        />

    <TextView
        android:id="@+id/txtTrending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Trending"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/pd_bold"
        android:layout_marginStart="@dimen/margin_edge"
        android:layout_marginTop="@dimen/view_topdown_spacing"
        android:layout_below="@id/txtSubtitle"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclTrending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTrending"
        tools:listitem="@layout/item_movie"
        tools:itemCount="1"
        android:clipToPadding="true"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <TextView
        android:id="@+id/txtPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Popular"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/pd_bold"
        android:layout_marginStart="@dimen/margin_edge"
        android:layout_marginTop="@dimen/view_topdown_spacing"
        android:layout_below="@id/rclTrending"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclPopular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPopular"
        tools:listitem="@layout/item_movie"
        tools:itemCount="1"
        android:clipToPadding="true"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/imvNoConnection"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:src="@drawable/icon_no_con"

        />
    <TextView
        android:id="@+id/txtNoConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imvNoConnection"
        android:layout_centerInParent="true"
        android:text="There is no connection"
        android:textColor="@color/app_gray"
        android:textSize="@dimen/subtext_size"
        android:fontFamily="@font/pd_bold"
        android:layout_marginTop="@dimen/space_text"
        />
    <Button
        android:id="@+id/btnRetry"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:layout_centerInParent="true"
        android:layout_below="@id/txtNoConnection"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/space_text"
        />
</RelativeLayout>